# ArchDogma

./: .gitignore  AST_TAGS_DRAFT.md  CHANGELOG.md  DOGMAS.md  LICENSE  README.md  pyproject.toml
.git.broken/: config  index
.git.broken/objects/07/: tmp_obj_z9fLZN
.git.broken/objects/0f/: tmp_obj_dsH9KP
.git.broken/objects/10/: tmp_obj_Xxa9gP
.git.broken/objects/38/: tmp_obj_bNeFBP
.git.broken/objects/45/: tmp_obj_Zy6yVO
.git.broken/objects/55/: tmp_obj_n3Df5P
.git.broken/objects/57/: tmp_obj_XHLFVL
.git.broken/objects/70/: tmp_obj_9bYB1L
.git.broken/objects/85/: tmp_obj_v1eYxM
.git.broken/objects/ac/: tmp_obj_lg7AKM
.git.broken/objects/c8/: tmp_obj_fBXJoO
.git.broken/objects/d3/: tmp_obj_fv27aO
.git.broken/objects/e4/: tmp_obj_VC569M
.git.broken/objects/e6/: tmp_obj_hWXoEM
.git.broken/objects/e9/: tmp_obj_dSSieQ
catalog/: dogmas.yaml
docs/adr/: 001-cli-first.md  002-machine-readable-catalog.md
src/archdogma/: __init__.py  __main__.py  cli.py  trust.py
src/archdogma/catalog/: __init__.py  loader.py  renderer.py  validator.py
src/archdogma/probe/: __init__.py  walker.py
src/archdogma/probe/tags/: __init__.py  tier1.py
src/archdogma/voice/: __init__.py  speak.py
tests/: test_catalog_loader.py  test_catalog_renderer.py  test_catalog_validator.py  test_cli_speak.py  test_file_probe.py  test_probe_catalog_wiring.py  test_smoke.py  test_tier1_deep_nesting.py  test_tier1_god_function.py  test_tier1_long_function.py  test_tier1_too_many_params.py  test_voice_speak.py
tests/fixtures/: deep_nesting_sample.py  file_probe_sample.py  god_function_sample.py  long_function_sample.py  too_many_params_sample.py
